; ModuleID = '/home/carl/AnghaBench/sway/swaynag/extr_types.c_swaynag_type_new.c'
source_filename = "/home/carl/AnghaBench/sway/swaynag/extr_types.c_swaynag_type_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.swaynag_type = type { i32, i32, i32, i32, i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [28 x i8] c"Failed to allocate type: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.swaynag_type* @swaynag_type_new(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.swaynag_type*, align 8
  store i8* %0, i8** %2, align 8
  %4 = call %struct.swaynag_type* @calloc(i32 1, i32 36)
  store %struct.swaynag_type* %4, %struct.swaynag_type** %3, align 8
  %5 = load %struct.swaynag_type*, %struct.swaynag_type** %3, align 8
  %6 = icmp ne %struct.swaynag_type* %5, null
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 @sway_abort(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i8* %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i8*, i8** %2, align 8
  %12 = call i32 @strdup(i8* %11)
  %13 = load %struct.swaynag_type*, %struct.swaynag_type** %3, align 8
  %14 = getelementptr inbounds %struct.swaynag_type, %struct.swaynag_type* %13, i32 0, i32 8
  store i32 %12, i32* %14, align 4
  %15 = load %struct.swaynag_type*, %struct.swaynag_type** %3, align 8
  %16 = getelementptr inbounds %struct.swaynag_type, %struct.swaynag_type* %15, i32 0, i32 0
  store i32 -1, i32* %16, align 4
  %17 = load %struct.swaynag_type*, %struct.swaynag_type** %3, align 8
  %18 = getelementptr inbounds %struct.swaynag_type, %struct.swaynag_type* %17, i32 0, i32 1
  store i32 -1, i32* %18, align 4
  %19 = load %struct.swaynag_type*, %struct.swaynag_type** %3, align 8
  %20 = getelementptr inbounds %struct.swaynag_type, %struct.swaynag_type* %19, i32 0, i32 2
  store i32 -1, i32* %20, align 4
  %21 = load %struct.swaynag_type*, %struct.swaynag_type** %3, align 8
  %22 = getelementptr inbounds %struct.swaynag_type, %struct.swaynag_type* %21, i32 0, i32 3
  store i32 -1, i32* %22, align 4
  %23 = load %struct.swaynag_type*, %struct.swaynag_type** %3, align 8
  %24 = getelementptr inbounds %struct.swaynag_type, %struct.swaynag_type* %23, i32 0, i32 4
  store i32 -1, i32* %24, align 4
  %25 = load %struct.swaynag_type*, %struct.swaynag_type** %3, align 8
  %26 = getelementptr inbounds %struct.swaynag_type, %struct.swaynag_type* %25, i32 0, i32 5
  store i32 -1, i32* %26, align 4
  %27 = load %struct.swaynag_type*, %struct.swaynag_type** %3, align 8
  %28 = getelementptr inbounds %struct.swaynag_type, %struct.swaynag_type* %27, i32 0, i32 6
  store i32 -1, i32* %28, align 4
  %29 = load %struct.swaynag_type*, %struct.swaynag_type** %3, align 8
  %30 = getelementptr inbounds %struct.swaynag_type, %struct.swaynag_type* %29, i32 0, i32 7
  store i32 -1, i32* %30, align 4
  %31 = load %struct.swaynag_type*, %struct.swaynag_type** %3, align 8
  ret %struct.swaynag_type* %31
}

declare dso_local %struct.swaynag_type* @calloc(i32, i32) #1

declare dso_local i32 @sway_abort(i8*, i8*) #1

declare dso_local i32 @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
